<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.teamplantpower.activities.HumidityDisplay">

    <TextView
        android:id="@+id/humidityExposureValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/value_humidity"
        android:layout_marginStart="100dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="65dp"
        android:layout_marginLeft="76dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/percentMax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="282dp"
        android:text="%"
        app:layout_constraintHorizontal_bias="0.919"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/percentMin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="282dp"
        android:text="%"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/percentValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="%"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="65dp"
        android:layout_marginRight="187dp"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/historicalHumidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="123dp"
        android:onClick="openHistorical"
        android:text="@string/button_historical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/setMaxHumidity"
        android:layout_width="134dp"
        android:layout_height="51dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="@string/value_set_max"
        app:layout_constraintHorizontal_bias="0.788"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="265dp" />

    <EditText
        android:id="@+id/setMinHumidity"
        android:layout_width="134dp"
        android:layout_height="51dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="@string/value_set_min"
        android:layout_marginLeft="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="265dp"
        android:layout_marginStart="30dp" />


    <Button
        android:id="@+id/setHumidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="373dp"
        android:onClick="setRange"
        android:text="@string/button_set"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView

        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="215dp"
        android:text="Set min and max humidity:"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="30dp" />


</android.support.constraint.ConstraintLayout>
