<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.teamplantpower.activities.MainActivity">

    <FrameLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/humidityButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="46dp"
                android:layout_weight="1"
                android:onClick="loadHumidity"
                android:text="Humidity" />

            <Button
                android:id="@+id/lightButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/messageBoardButton"
                android:layout_alignStart="@+id/messageBoardButton"
                android:layout_below="@+id/messageBoardButton"
                android:layout_weight="1"
                android:onClick="loadLight"
                android:text="Light" />

            <Button
                android:id="@+id/temperatureButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/lightButton"
                android:layout_alignParentBottom="true"
                android:layout_alignStart="@+id/lightButton"
                android:layout_marginBottom="65dp"
                android:layout_weight="1"
                android:onClick="loadTemperature"
                android:text="Temperature" />

            <Button
                android:id="@+id/messageBoardButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="46dp"
                android:layout_weight="1"
                android:onClick="loadMessageBoard"
                android:text="Message Board" />

            <Button
                android:id="@+id/StartNotification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:onClick="startNotification"
                android:text="Start Notification"
                app:layout_constraintTop_toBottomOf="@+id/messageBoardButton" />
        </LinearLayout>

    </FrameLayout>
    

</LinearLayout>
