<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.teamplantpower.activities.LightDisplay">

    <TextView
        android:id="@+id/percentMin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="282dp"
        android:text="%"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lightExposureValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/value_light"
        android:layout_marginStart="60dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="62dp"
        android:layout_marginLeft="98dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/percentMax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="282dp"
        android:text="%"
        app:layout_constraintHorizontal_bias="0.919"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/percentValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="187dp"
        android:layout_marginTop="62dp"
        android:text="%"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/historicalLight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="123dp"
        android:onClick="openHistorical"
        android:text="@string/button_historical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/setMaxLight"
        android:layout_width="134dp"
        android:layout_height="51dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="@string/value_set_max"
        app:layout_constraintHorizontal_bias="0.788"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="265dp" />

    <EditText
        android:id="@+id/setMinLight"
        android:layout_width="134dp"
        android:layout_height="51dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="@string/value_set_min"
        android:layout_marginLeft="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="265dp"
        android:layout_marginStart="30dp" />

    <Button
        android:id="@+id/setLight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="373dp"
        android:onClick="setRange"
        android:text="@string/button_set"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="215dp"
        android:text="Set min and max light:"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="30dp" />

</android.support.constraint.ConstraintLayout>
